--- a/guides/linked/ee-api-colab-setup.ipynb
+++ b/guides/linked/ee-api-colab-setup.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ee-api-colab-setup.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2489,6 +2490,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wangbo6418/Google-Earth-Engine/blob/main/guides/linked/ee-api-colab-setup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "krsLgVBYZw_A"
@@ -2608,10 +2619,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "v7pD6pDOAhOW",
-        "outputId": "bfd4874a-35d3-49b8-ec24-48c8dcfdcc66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bfd4874a-35d3-49b8-ec24-48c8dcfdcc66"
       },
       "source": [
         "# Print the elevation of Mount Everest.\n",
@@ -2661,11 +2672,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Fp4rdpy0eGjx",
-        "outputId": "a1edec13-e9d4-43ac-a19e-aa12f37ca45a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 277
-        }
+        },
+        "outputId": "a1edec13-e9d4-43ac-a19e-aa12f37ca45a"
       },
       "source": [
         "# Import the Image function from the IPython.display module.\n",
@@ -2713,7 +2724,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "VIiyf6azf4mU",
-        "outputId": "7bc602e9-af94-43fd-c57f-203939f296a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 621,
@@ -2794,7 +2804,8 @@
             "d61580ac9e45404098151e0f72f17347",
             "8c653515078e44f792a9bbedb0f820d9"
           ]
-        }
+        },
+        "outputId": "7bc602e9-af94-43fd-c57f-203939f296a7"
       },
       "source": [
         "# Import the geemap library.\n",
@@ -2860,11 +2871,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "tRPULejJhBSl",
-        "outputId": "b0467583-d7ae-4ada-b7ce-05ab99f64559",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        }
+        },
+        "outputId": "b0467583-d7ae-4ada-b7ce-05ab99f64559"
       },
       "source": [
         "# Import the matplotlib.pyplot module.\n",
